deployment!: config email env variables and cors origins